--- a/kaggle/Elucidata/Ensemble2.ipynb
+++ b/kaggle/Elucidata/Ensemble2.ipynb
@@ -61,37 +61,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "1349edf0",
    "metadata": {},
    "outputs": [],
    "source": [
     "#df_log_std_pca_5_eff_b0_S2_mse, _ = joblib.load('result/cv_log_std_pca_5_eff_b0_S2_mse.joblib') # 0.5582929638498111\n",
-    "df_log_std_pca_5_eff_b0_pre_fine_S2_mse, _ = joblib.load('result/cv_log_std_pca_5_eff_b0_pre_fine_S2_mse.joblib') # 0.5628191101569386\n",
-    "df_log_std_pca_5_eff_b1_pre_fine_S2_mse, _ = joblib.load('result/cv_log_std_pca_5_eff_b1_pre_fine_S2_mse.joblib') # 0.5606549434961433"
+    "df_log_enet_8x8_S2_mae, _ = joblib.load('result/log_enet_8x8_S2_mae.joblib')\n",
+    "df_log_enet_8x8_S2_mse, _ = joblib.load('result/log_enet_8x8_S2_mse.joblib')\n",
+    "df_log_enet_16x16_S2_mse, _ = joblib.load('result/log_enet_16x16_S2_mse.joblib')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "049a1754",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5650678209579263"
+       "0.4365189800630248"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prd = df_log_std_pca_5_eff_b1_pre_fine_S2_mse[targets].rank(axis = 1)\n",
+    "prd = np.zeros_like(df_log_enet_8x8_S2_mse[targets])\n",
     "for i in [\n",
-    "    df_log_std_pca_5_eff_b0_pre_fine_S2_mse\n",
+    "    df_log_enet_8x8_S2_mse,\n",
+    "    df_log_enet_8x8_S2_mae,\n",
+    "    df_log_enet_16x16_S2_mse\n",
     "]:\n",
     "    prd += i[targets].rank(axis = 1)\n",
     "from scipy.stats import spearmanr\n",
