--- a/kaggle/Elucidata/ML_log_std_pca_5_eff_b1_S2_pos_mse.ipynb
+++ b/kaggle/Elucidata/ML_log_std_pca_5_eff_b1_S2_pos_mse.ipynb
@@ -5,7 +5,18 @@
    "execution_count": 1,
    "id": "49ca6e1c-6c6c-40b2-afa8-a36faf0cf557",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-05-04 09:04:13.333769: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1746349453.345952   11128 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1746349453.349333   11128 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
@@ -41,7 +52,15 @@
    "execution_count": 2,
    "id": "4b9d49ae-5b81-440d-9553-2b3c157d9b95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0000 00:00:1746349455.893821   11128 gpu_device.cc:2022] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 5520 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 4070 Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.9\n"
+     ]
+    }
+   ],
    "source": [
     "def load_data(filename):\n",
     "    \"\"\"\n",
@@ -122,9 +141,12 @@
     "def create_tf_ds(df):\n",
     "    if (pd.Series(targets).isin(df.columns)).all():\n",
     "        return tf.data.Dataset.from_tensor_slices(\n",
-    "            ({\n",
-    "                i: df[i] for i in ['left', 'right', 'top', 'bottom', 'slide', 'lpad', 'rpad', 'tpad', 'bpad']\n",
-    "            }, df[targets2])\n",
+    "            (\n",
+    "                {\n",
+    "                    'pos': df[['x_mm', 'y_mm']],\n",
+    "                    **{i: df[i] for i in ['left', 'right', 'top', 'bottom', 'slide', 'lpad', 'rpad', 'tpad', 'bpad']}\n",
+    "                }, df[targets2]\n",
+    "            )\n",
     "        )\n",
     "    else:\n",
     "        return tf.data.Dataset.from_tensor_slices({\n",
@@ -160,6 +182,16 @@
     "targets2 = ['pca_{}'.format(i) for i in range(n_components)]\n",
     "df_spots= df_spots.join(\n",
     "    pd.DataFrame(target_proc.transform(df_spots[targets]), index = df_spots.index, columns = targets2)\n",
+    ")\n",
+    "df_spots = df_spots.join(\n",
+    "    df_spots.groupby('slide')[['x', 'y']].transform(\n",
+    "        lambda x: (x - x.min()) * 2 / (x.max() - x.min()) - 1\n",
+    "    ).rename(columns = lambda x: x+'_mm')\n",
+    ")\n",
+    "df_spots_test = df_spots_test.join(\n",
+    "    df_spots_test.groupby('slide')[['x', 'y']].transform(\n",
+    "        lambda x: (x - x.min()) * 2 / (x.max() - x.min()) - 1\n",
+    "    ).rename(columns = lambda x: x+'_mm')\n",
     ")"
    ]
   },
@@ -218,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "85f6bb94-80cf-4636-956d-26eb52785bea",
    "metadata": {},
    "outputs": [],
@@ -227,20 +259,26 @@
     "\n",
     "def create_model(img_width, img_height):\n",
     "    input_shape = (img_width, img_height, 3)\n",
+    "    enet_, _ = joblib.load('model/ae_encoder_obj.joblib')\n",
     "    enet = tf.keras.applications.EfficientNetB1(\n",
     "        include_top = False, \n",
-    "        weights = 'imagenet',\n",
     "        input_shape = input_shape,\n",
     "        pooling = 'avg'\n",
     "    )\n",
-    "    inputs = tf.keras.Input(shape = input_shape)\n",
-    "    x = enet(inputs, training = False)\n",
+    "    enet.set_weights(enet_)\n",
+    "    input_img = tf.keras.Input(shape = input_shape, name = 'img')\n",
+    "    input_pos = tf.keras.Input(shape = (2,), name = 'pos')\n",
+    "    for i in enet.layers:\n",
+    "        if not isinstance(i, tf.keras.layers.BatchNormalization):\n",
+    "            i.trainable = True\n",
+    "    x = enet(input_img)\n",
     "    x = tf.keras.layers.Dropout(0.5)(x)\n",
-    "    d1 = tf.keras.layers.Dense(256, activation = 'relu', kernel_initializer = 'HeUniform')\n",
+    "    x = tf.keras.layers.Concatenate()([x, input_pos])\n",
+    "    d1 = tf.keras.layers.Dense(128, activation = 'relu', kernel_initializer = 'HeUniform')\n",
     "    x = d1(x)\n",
     "    d2 = tf.keras.layers.Dense(len(targets2))\n",
     "    outputs = d2(x)\n",
-    "    m = tf.keras.models.Model(inputs, outputs)\n",
+    "    m = tf.keras.models.Model({'img': input_img, 'pos': input_pos}, outputs)\n",
     "    return m, (enet, d1, d2)\n",
     "\n",
     "def reconstruct_model(layers):\n",
@@ -266,20 +304,20 @@
     "            ])\n",
     "        )\n",
     "    ).shuffle(5000).map(\n",
-    "        lambda X, Y: (proc_images(X, images), Y)\n",
+    "        lambda X, Y: (proc_images(X, images), X['pos'], Y)\n",
     "    ).map(\n",
-    "        lambda X, Y: (data_augmentation(X), Y)\n",
+    "        lambda X, P, Y: ({'img': data_augmentation(X), 'pos': P}, Y)\n",
     "    ).batch(batch_size).prefetch(tf.data.AUTOTUNE).cache()\n",
     "\n",
     "    ds_cv_prd = create_tf_ds(\n",
     "        df_spots.iloc[train_idx]\n",
     "    ).map(\n",
-    "        lambda X, Y: (proc_images(X, images), Y)\n",
+    "        lambda X, Y: ({'img': proc_images(X, images), 'pos': X['pos']}, Y)\n",
     "    ).batch(batch_size).prefetch(tf.data.AUTOTUNE).cache()\n",
     "    \n",
     "    if valid_idx is not None:\n",
     "        ds_valid = create_tf_ds(df_spots.iloc[valid_idx]).map(\n",
-    "            lambda X, Y: (proc_images(X, images), Y)\n",
+    "            lambda X, Y: ({'img': proc_images(X, images), 'pos': X['pos']}, Y)\n",
     "        ).batch(batch_size).prefetch(tf.data.AUTOTUNE).cache()\n",
     "    else:\n",
     "        ds_valid = None\n",
@@ -338,35 +376,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "0271b002",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_width = 224\n",
-    "img_height = 224\n",
+    "img_width = 240\n",
+    "img_height = 240\n",
     "df_spots = make_img_proc_info(df_spots, img_width, img_height)\n",
     "df_spots_test = make_img_proc_info(df_spots_test, img_width, img_height)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "e0405540-a28d-4ece-a479-bc8ae991fe4a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/keras-applications/efficientnetb1_notop.h5\n",
-      "\u001b[1m27018416/27018416\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 0us/step\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc28aef9769d4304ad84e6130a010786",
+       "model_id": "b7f6f201b45940acbaa17b185db3a5e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -378,9 +408,30 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1746349674.607091   11179 service.cc:148] XLA service 0x7f13680016d0 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "I0000 00:00:1746349674.607129   11179 service.cc:156]   StreamExecutor device (0): NVIDIA GeForce RTX 4070 Laptop GPU, Compute Capability 8.9\n",
+      "I0000 00:00:1746349678.535710   11179 cuda_dnn.cc:529] Loaded cuDNN version 90300\n",
+      "E0000 00:00:1746349689.920164   11179 gpu_timer.cc:82] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "E0000 00:00:1746349690.109273   11179 gpu_timer.cc:82] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "E0000 00:00:1746349690.307492   11179 gpu_timer.cc:82] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "E0000 00:00:1746349690.493640   11179 gpu_timer.cc:82] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "E0000 00:00:1746349699.918507   11179 gpu_timer.cc:82] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "E0000 00:00:1746349700.103990   11179 gpu_timer.cc:82] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "E0000 00:00:1746349700.293295   11179 gpu_timer.cc:82] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "E0000 00:00:1746349700.894898   11179 gpu_timer.cc:82] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "E0000 00:00:1746349701.105534   11179 gpu_timer.cc:82] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "E0000 00:00:1746349701.321569   11179 gpu_timer.cc:82] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "I0000 00:00:1746349717.304631   11179 device_compiler.h:188] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64e2635fb02e4bb1bc376773e27465c3",
+       "model_id": "aee1b6edc4474c86a42ab9f57b4a61de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -394,7 +445,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c12b1412801f4c628a5235d4cddad04a",
+       "model_id": "d4c46bfe6e824583b045677b4342a3d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -408,7 +459,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1552b3a1f64a421db64a1389376ce81f",
+       "model_id": "921fb629f40b4239bac3cc26e4c5f3b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -422,7 +473,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbc1ce586b4f45c1a4abfd6d186a1670",
+       "model_id": "821906f8e52149fdbe58556e091aea3a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -436,7 +487,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2466bd75e99a49b9bc08c459daea479d",
+       "model_id": "36d7db803c754e4d9aa77ed7a3bce9db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -483,12 +534,12 @@
      "data": {
       "text/plain": [
        "slide\n",
-       "0    0.494688\n",
-       "1    0.716031\n",
-       "2    0.653993\n",
-       "3    0.465905\n",
-       "4    0.385892\n",
-       "5    0.543335\n",
+       "0    0.523452\n",
+       "1    0.776939\n",
+       "2    0.607110\n",
+       "3    0.511377\n",
+       "4    0.325316\n",
+       "5    0.536731\n",
        "dtype: float64"
       ]
      },
@@ -513,7 +564,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5440003046373658"
+       "0.5582929638498111"
       ]
      },
      "execution_count": 9,
@@ -537,7 +588,7 @@
     {
      "data": {
       "text/plain": [
-       "['result/cv_log_std_pca_5_eff_b1_S2_mse.joblib']"
+       "['result/cv_log_std_pca_5_eff_b0_S2_mse.joblib']"
       ]
      },
      "execution_count": 10,
@@ -546,7 +597,7 @@
     }
    ],
    "source": [
-    "joblib.dump((df_oof, scores), 'result/cv_log_std_pca_5_eff_b1_S2_mse.joblib')"
+    "joblib.dump((df_oof, scores), 'result/cv_log_std_pca_5_eff_b0_S2_mse.joblib')"
    ]
   },
   {
@@ -559,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "f0a9b458",
    "metadata": {},
    "outputs": [],
@@ -572,14 +623,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "7c78e79c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77e27868728f4933ba02c19cec860add",
+       "model_id": "a0c710cdd0d44aa0bb8cff0d0dcd3ca5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -652,44 +703,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "8872b7f4-5a81-4cbe-bf0e-860c1fecae0a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['model/log_std_pca_5_eff_b1_S2_mse.joblib']"
+       "['model/log_std_pca_5_eff_b0_S2_mse.joblib']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(m.get_weights(), 'model/log_std_pca_5_eff_b1_S2_mse.joblib')"
+    "joblib.dump(m.get_weights(), 'model/log_std_pca_5_eff_b0_S2_mse.joblib')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "324394a4-4a9d-4ac1-a7ab-e923c2c3b5b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['model/target_proc_log_std_pca_5_eff_b1_S2_mse.joblib']"
+       "['model/target_proc_log_std_pca_5_eff_b0_S2_mse.joblib']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(target_proc, 'model/target_proc_log_std_pca_5_eff_b1_S2_mse.joblib') "
+    "joblib.dump(target_proc, 'model/target_proc_log_std_pca_5_eff_b0_S2_mse.joblib') "
    ]
   },
   {
@@ -703,7 +754,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -717,7 +768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
