--- a/kaggle/Elucidata/RASCARegressor.ipynb
+++ b/kaggle/Elucidata/RASCARegressor.ipynb
@@ -2,19 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "4c93088f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import h5py"
+    "import h5py\n",
+    "\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import FunctionTransformer, StandardScaler\n",
+    "from sklearn.decomposition import PCA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "995518a4",
    "metadata": {},
    "outputs": [],
@@ -25,16 +29,26 @@
     "    train_spot_tables = {slide_name: pd.DataFrame(np.array(train_spots[slide_name])).assign(slide = slide_name) for slide_name in train_spots.keys()}\n",
     "\n",
     "# Combine all training slides\n",
-    "df_train = pd.concat(train_spot_tables.values(), ignore_index=True)\n",
+    "df_spots = pd.concat(train_spot_tables.values(), ignore_index=True)\n",
     "\n",
     "# Extract features and target labels\n",
     "X = ['x', 'y']  # Use spatial coordinates\n",
-    "y = [i for i in df_train.columns if i.startswith('C')]"
+    "targets = [i for i in df_spots.columns if i.startswith('C')]\n",
+    "\n",
+    "n_components = 5\n",
+    "target_proc = make_pipeline(\n",
+    "    FunctionTransformer(np.log, np.exp), StandardScaler(), PCA(n_components=n_components)\n",
+    ").fit(df_spots[targets])\n",
+    "target_proc.fit(df_spots[targets])\n",
+    "targets2 = ['pca_{}'.format(i) for i in range(n_components)]\n",
+    "df_spots= df_spots.join(\n",
+    "    pd.DataFrame(target_proc.transform(df_spots[targets]), index = df_spots.index, columns = targets2)\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "28274f8d",
    "metadata": {},
    "outputs": [
@@ -47,22 +61,22 @@
        "RANSACRegressor()"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.linear_model import  RANSACRegressor\n",
-    "df_cv_train = df_train.loc[df_train['slide'] != 'S_6']\n",
-    "df_valid = df_train.loc[df_train['slide'] == 'S_6']\n",
+    "df_cv_train = df_spots.loc[df_spots['slide'] != 'S_6']\n",
+    "df_valid = df_spots.loc[df_spots['slide'] == 'S_6']\n",
     "r_reg = RANSACRegressor()\n",
-    "r_reg.fit(df_cv_train[X], df_cv_train[y])"
+    "r_reg.fit(df_cv_train[X], df_cv_train[targets2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "0bdbe6b1",
    "metadata": {},
    "outputs": [
@@ -70,16 +84,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.125788022718969\n"
+      "0.4376560198945555\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.3374923139987702"
+       "0.44669758147161304"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,65 +103,85 @@
     "\n",
     "print(\n",
     "    pd.DataFrame(\n",
-    "        r_reg.predict(df_train[X]), index = df_train.index, columns = y\n",
+    "        target_proc.inverse_transform(r_reg.predict(df_cv_train[X])), index = df_cv_train.index, columns = targets\n",
     "    ).apply(\n",
-    "        lambda x: spearmanr(x, df_train.loc[x.name, y])[0],axis=1\n",
+    "        lambda x: spearmanr(x, df_cv_train.loc[x.name, targets])[0],axis=1\n",
     "    ).mean()\n",
     ")\n",
     "\n",
     "pd.DataFrame(\n",
-    "    r_reg.predict(df_valid[X]), index = df_valid.index, columns = y\n",
+    "    target_proc.inverse_transform(r_reg.predict(df_valid[X])), index = df_valid.index, columns = targets\n",
     ").apply(\n",
-    "    lambda x: spearmanr(x, df_valid.loc[x.name, y])[0],axis=1\n",
+    "    lambda x: spearmanr(x, df_valid.loc[x.name, targets])[0],axis=1\n",
     ").mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "b2eda558",
+   "execution_count": 33,
+   "id": "4b6f89dd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(328, 35)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "r_reg.predict(df_valid[X]).shape"
+    "df_spots = df_spots.join(\n",
+    "    df_spots.groupby('slide')[['x', 'y']].transform(\n",
+    "        lambda x: (x - x.min()) * 2 / (x.max() - x.min()) - 1\n",
+    "    ).rename(columns = lambda x: x+'_mm')\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "4b6f89dd",
+   "execution_count": 34,
+   "id": "91316a72",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "35"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S_1 0.49113212254993033 0.4052636074912441\n",
+      "S_2 0.3166313473900829 0.40583348758005405\n",
+      "S_3 0.4045952053624688 0.4145029026103196\n",
+      "S_4 0.48745812203686284 0.21108649019843828\n",
+      "S_5 0.5043200313698621 0.019683842529259764\n",
+      "S_6 0.3604943186600161 0.6606092436974791\n"
+     ]
     }
    ],
    "source": [
-    "len(y)"
+    "from sklearn.linear_model import  RANSACRegressor\n",
+    "from scipy.stats import spearmanr\n",
+    "X = ['x_mm', 'y_mm']\n",
+    "r_reg = RANSACRegressor()\n",
+    "coef_train, coef_valid = list(), list()\n",
+    "for i in df_spots['slide'].unique():\n",
+    "    df_cv_train = df_spots.loc[df_spots['slide'] != i]\n",
+    "    df_valid = df_spots.loc[df_spots['slide'] == i]\n",
+    "    r_reg.fit(df_cv_train[X], df_cv_train[targets2])\n",
+    "\n",
+    "    coef_train.append(\n",
+    "        pd.DataFrame(\n",
+    "            target_proc.inverse_transform(r_reg.predict(df_cv_train[X])), index = df_cv_train.index, columns = targets\n",
+    "        ).apply(\n",
+    "            lambda x: spearmanr(x, df_cv_train.loc[x.name, targets])[0],axis=1\n",
+    "        ).mean()\n",
+    "    )\n",
+    "\n",
+    "    coef_valid.append(\n",
+    "        pd.DataFrame(\n",
+    "            target_proc.inverse_transform(r_reg.predict(df_valid[X])), index = df_valid.index, columns = targets\n",
+    "        ).apply(\n",
+    "            lambda x: spearmanr(x, df_valid.loc[x.name, targets])[0],axis=1\n",
+    "        ).mean()\n",
+    "    )\n",
+    "    print(i, coef_train[-1], coef_valid[-1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91316a72",
+   "id": "5aaadce2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -155,7 +189,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -169,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
