--- a/kaggle/PGS5/PGS5_ep5/4.Experiment_4.ipynb
+++ b/kaggle/PGS5/PGS5_ep5/4.Experiment_4.ipynb
@@ -10,16 +10,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-18 00:42:21.065429: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-05-18 00:42:21.073698: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-05-20 01:15:47.169542: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-05-20 01:15:47.179407: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1747496541.082916  317028 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1747496541.085879  317028 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1747496541.093254  317028 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1747496541.093262  317028 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1747496541.093263  317028 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1747496541.093264  317028 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "2025-05-18 00:42:21.096122: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1747671347.189543   51045 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1747671347.192828   51045 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1747671347.201071   51045 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1747671347.201082   51045 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1747671347.201083   51045 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1747671347.201084   51045 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-05-20 01:15:47.204127: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -33,7 +33,7 @@
     "from sklearn.metrics import root_mean_squared_error\n",
     "\n",
     "from proc_v2 import p\n",
-    "from ml_v1 import X_cat, X_num, X_all, target, kf, ss, config\n",
+    "from ml_v1 import X_cat, X_num, X_all, target, kf, ss, config, scheduler\n",
     "from ml_v1 import xgb_adapter, lgb_adapter, cb_adapter, lr_adapter, nn_adapter\n",
     "\n",
     "sc = sgutil.SGCache('img', 'result', 'model')\n",
@@ -41,6 +41,174 @@
     "    Calories_Log = lambda x: np.log(x['Calories'] + 1)\n",
     ")\n",
     "df_test = p.transform(['data/test.csv'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36dc94de-e3ae-41aa-8add-cab547e0bf01",
+   "metadata": {},
+   "source": [
+    "# 검증 방법의 조정 검토\n",
+    "\n",
+    "Duration이 target에 영향도가 높다는 것은 공감이 됩니다. \n",
+    "\n",
+    "기존의 경험중에서 검증 방법의 부적합함으로 순위가 낮게 나온적이 있어 조정 검토를 해봅니다.\n",
+    "\n",
+    "Kaggler의 분석 중에서 Duration의 10 분위구간으로 계층적 분리 사례가 보입니다. \n",
+    "\n",
+    "Public Leader가 검증보다 좋게 나오니 더 좋은 결과와 기복이 적은 검증을 보여 주는 게 더 적합 검증법이라 생각이 되어 조정을 검토를 위해\n",
+    "\n",
+    "제시된 검증법의 결과를 살펴봅니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d444497a-a5dd-429a-a428-cb5f73e27bee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold, KFold\n",
+    "skf = StratifiedKFold(5, random_state = 123, shuffle = True)\n",
+    "kf5 = KFold(5, random_state = 123, shuffle = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a7d1985c-30e3-4579-afac-0fb6f90144c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df_train['duration_bin'] = pd.qcut(df_train['Duration'], q = 10, labels = np.arange(0, 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cce7145f-30ca-4466-8fa9-b0187bfdcb08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0602333072030953, 0.0007964254636918083)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_lgb1_kf4 = sc.read_cv('lgb1')\n",
+    "np.mean(result_lgb1_kf4['valid_scores']), np.std(result_lgb1_kf4['valid_scores'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7125da18-23ec-4b39-8d9f-0d280372dd93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = sgml.cv(df_train, skf, result_lgb1_kf4['hparams'], {**config, 'sp_y': 'duration_bin'}, result_lgb1_kf4['adapter'])\n",
+    "np.mean(result['valid_scores']), np.std(result['valid_scores'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b2886b8-d639-46af-9d3c-fccf188dc74b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = sgml.cv(df_train, kf5, result_lgb1_kf4['hparams'], config, result_lgb1_kf4['adapter'])\n",
+    "np.mean(result['valid_scores']), np.std(result['valid_scores'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e07d3a5-9bca-49b0-9924-930338b77aa5",
+   "metadata": {},
+   "source": [
+    "- Kaggler들의 결과와 비교를 위해 5Fold를 기복이 더 적고, Public Score와 유사한 Duration_bin에 대한 계층적 분리를 선택합니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbd47c28-64a7-4df8-b560-3953eb9d0c6c",
+   "metadata": {},
+   "source": [
+    "## 재학습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a7babdcb-b48d-46ac-b6b9-98bd42bde261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in ['lgb2', 'lgb1', 'xgb1', 'xgb2', 'cb1', 'cb2', 'cb3', 'cb4', 'nn1', 'nn2']:\n",
+    "    result_kf4= sc.read_cv(i)\n",
+    "    sc.cv_result(i + '_skf5', df_train, skf, result_kf4['hparams'], {**config, 'sp_y': 'duration_bin'}, result_kf4['adapter'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3e8ef440-6c01-4aa1-aa6e-4f8aefad0892",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_stk = sc.read_prds(\n",
+    "    [i + '_skf5' for i in ['lgb2', 'lgb1', 'xgb1', 'xgb2', 'cb1', 'cb2', 'cb3', 'cb4', 'nn1', 'nn2']], index = df_train.index\n",
+    ").assign(\n",
+    "    Calories_Log = df_train[target],\n",
+    "    duration_bin = pd.qcut(df_train['Duration'], q = 10, labels = np.arange(0, 10))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "11459f62-1d20-4703-98cc-43c7dff32526",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "783300c84ffd4ece94271b5c3c9a3284",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fold:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.05905013560776077"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_stk = [i + '_skf5' for i in ['lgb2', 'lgb1', 'xgb1', 'xgb2', 'cb1', 'cb2', 'cb3', 'cb4', 'nn1', 'nn2']]\n",
+    "hparams = {\n",
+    "    'X_num': X_stk\n",
+    "}\n",
+    "result = sgml.cv(df_stk, skf, hparams, {**config, 'sp_y': 'duration_bin'}, lr_adapter)\n",
+    "np.mean(result['valid_scores'])"
    ]
   },
   {
